# axiom

./: .autoenv  .env.example  .gitignore  AI_CONTEXT.md  ALL_12_MCP_SERVERS_RUNNING.md  ARCHITECTURE_GAP_ANALYSIS.md  BATCHES_1_AND_2_MILESTONE_COMPLETE.md  BATCH_1_IMPLEMENTATION_COMPLETE.md  COMPLETE_PROJECT_STATUS_NOV_26.md  COMPLETE_QUALITY_FRAMEWORK_SUMMARY.md  COMPLETE_SESSION_ACHIEVEMENT.md  COMPLETE_SESSION_SUMMARY_2025_10_29.md  COMPLETE_WORK_SUMMARY_OCT_29.md  COMPREHENSIVE_SESSION_SUMMARY_OCT_31.md  CONTEXT.md  DATABASE_INTEGRATION_COMPLETE.md  DATA_INFRASTRUCTURE_COMPREHENSIVE_ANALYSIS.md  DERIVATIVES_COMPLETE_SUMMARY.md  EFFICIENCY_GUIDELINES.md  ENHANCEMENT_ROADMAP.md  FINAL_COMPLETE_DATA_ACHIEVEMENT_OCT_31.md  FINAL_COMPREHENSIVE_WORK_SUMMARY.md  FIX_MAIN_BRANCH_v2.md  M&A_SYSTEM_OVERVIEW.md  M&A_WORKFLOWS_BUSINESS_RATIONALE.md  M&A_WORKFLOW_EXECUTION_GUIDE.md  M&A_WORKFLOW_GUIDE.md  MAJOR_ACHIEVEMENT_DATA_INFRASTRUCTURE_COMPLETE.md  MCP_RESTRUCTURE_IMPLEMENTATION_PLAN.md  MCP_VALIDATION_STATUS.md  MULTI_DATABASE_ARCHITECTURE_COMPLETE.md  NEXT_PHASE_PLAN.md  NEXT_STEPS.md  NEXT_STEPS_DATA_INFRASTRUCTURE.md  PRODUCTION_PLATFORM_COMPLETE.md  PROFESSIONAL_MCP_STRUCTURE_COMPLETE.md  PROJECT_RULES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  (+32 more)
.roo/: COMMAND_EXECUTION_RULES.md  COMPLETION_RESPONSE_RULES.md
axiom/: MCP_ARCHITECTURE_SEPARATION.md  MCP_FOLDER_ARCHITECTURE.md  __init__.py  main.py
benchmarks/: INSTALLATION_NOTE.md  README.md  VISUALIZATION_GUIDE.md  generate_visualizations.py  performance_benchmarks.py
demos/: QUANT_FINANCE_DEMO_README.md  README.md  demo_advanced_var_models.py  demo_cnn_lstm_credit_model.py  demo_complete_ai_platform.py  demo_complete_data_infrastructure.py  demo_complete_integrated_system.py  demo_complete_ma_workflow.py  demo_complete_optimized_platform.py  demo_complete_platform_42_models.py  demo_database_integrated_pipeline.py  demo_database_integration.py  demo_deep_intelligence_apple.py  demo_enhanced_ma_workflows.py  demo_ensemble_credit_model.py  demo_external_libraries.py  demo_financial_provider_integration.py  demo_fixed_income.py  demo_generate_client_reports.py  demo_integrated_quant_finance.py  demo_lstm_cnn_portfolio.py  demo_ma_analysis.py  demo_ma_intelligence_system.py  demo_ma_quant_models.py  demo_market_microstructure.py  demo_multi_database_architecture.py  demo_options_pricing.py  demo_portfolio_optimization.py  demo_portfolio_transformer.py  demo_rag_system.py  demo_real_time_streaming.py  demo_realtime_data_streaming.py  demo_rl_garch_var_2025.py  demo_rl_portfolio_manager.py  demo_streaming_api.py  demo_time_series_models.py  demo_ultra_fast_derivatives.py  demo_vae_option_pricer.py  demo_var_risk_models.py  demo_week2_mcp_integration.py  (+4 more)
docker/: Dockerfile.api  alerts.yml  api-compose.yml  docker-compose.production.yml  nginx.conf  prometheus-mcp.yml  prometheus.yml  redis-mcp.yml  redis.conf  specialized-services.yml  streaming-redis.yml  week2-services.yml  week3-services.yml
docs/: API_DOCUMENTATION.md  CASE_STUDIES.md  COMPLETE_ACHIEVEMENT_SUMMARY.md  CONFIGURATION.md  CONTEXT.md  DATA_QUALITY_EXPANSION_STRATEGY.md  DEPLOYMENT_GUIDE.md  DERIVATIVES_PLATFORM_SUMMARY.md  DERIVATIVES_SPECIALIZATION_STRATEGY.md  DOCUMENTATION_UPDATE_SUMMARY.md  END_TO_END_DEMO_GUIDE.md  ENHANCEMENT_ROADMAP.md  EXTERNAL_MCP_MIGRATION.md  FAQ.md  FINAL_PROJECT_STATUS.md  FINANCIAL_PROVIDER_INTEGRATION.md  GIT_WORKFLOW_GUIDELINES.md  HONEST_PROJECT_STATUS.md  INTEGRATION_QUICKSTART.md  LANGGRAPH_DATA_STRATEGY.md  LANGGRAPH_VISUALIZATION.md  LIBRARY_REPLACEMENT_AUDIT.md  LIGHTWEIGHT_3D_GRAPH_OPTIONS.md  MASTER_CONTEXT.md  MCP_ECOSYSTEM_IMPLEMENTATION.md  MCP_ECOSYSTEM_SUMMARY.md  MCP_EXPANSION_STRATEGY.md  MCP_FASTMCP_CONVERSION_PLAN.md  MCP_LIBRARY_COMPARISON.md  NEO4J_BETTER_VISUALIZATION_OPTIONS.md  NEO4J_VISUALIZATION_GUIDE.md  ONE_PAGER.md  OPEN_SOURCE_LEVERAGE_STRATEGY.md  ORCHESTRATION_TECH_EVALUATION.md  PITCH_DECK.md  PROJECT_COMPLETION_ASSESSMENT.md  QUICKSTART.md  (+18 more)
(+1031 files in other folders)
