[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom"
version = "0.1.0"
description = "Investment Banking Analytics Platform — AI-Powered Due Diligence, M&A Analysis, and Financial Intelligence"
authors = [
    {name = "Axiom Team", email = "team@axiom.dev"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "dspy-ai>=2.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "tavily-python>=0.3.0",
    "firecrawl-py>=0.0.8",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=2.0.0",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
sglang = [
    "sglang[all]>=0.2.0",
]
quantitative = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "numba>=0.57.0",
]

# UV-specific configuration for enhanced performance
[tool.uv]
index-url = "https://pypi.org/simple"
resolution = "highest"

# Modern dependency groups (UV preferred format)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
axiom = "axiom.main:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
